# intermededit

./: .gitignore  .justfile  Cargo.toml  README.md  assigned-groups.txt  complete-run  flake.nix  special-char-bit-mapping  special-char-bit-mapping-without-to-uppercase
.github/workflows/: deploy-docs-to-pages.yml
benches/: max_depth_way_generation.rs  shortest_path.rs  wordlist_read.rs
benchmark-results/: benchmarkresult-main-4a4d70.md  benchmarkresult-main-5f6396.md
crates/duden-reference/: Cargo.toml  lists  sheet-tasks.txt
crates/duden-reference/display-data/: heatmap.py  main.py  pyproject.toml
crates/duden-reference/src/: lib.rs  prelude.rs
crates/duden-reference/src/base/: basic_one_step.rs  letters.rs  mod.rs  operations.rs  word.rs  wordlist.rs
crates/duden-reference/src/graphs/: from_edge_iterator.rs  maybe_cached.rs  mod.rs  s_components.rs
lists/: Makefile
src/: components.rs  edge_generation.rs  graph_generation.rs  letters.rs  lib.rs  main.rs  one_step.rs  read.rs  shortest_paths.rs  visual_component_classification.rs  word.rs
src/base/: has_word.rs  len_let_bucket.rs  len_let_wordlist.rs  letters.rs  mod.rs  one_step.rs  operations.rs  operations_macro.rs  tagged_len_let_wordlist.rs  tagged_word.rs  word.rs  wordlist.rs  wordlist_ext.rs  wordlist_kinds.rs
src/base/model/: mod.rs  operations_macro.rs  tagged_word.rs
src/components/: connected.rs  mod.rs  using_bfs.rs  using_union.rs  visual_bfs.rs
src/shortest_paths/: hop_distance_bfs.rs  keep_best.rs  mod.rs  pairs_in_component.rs
src/step_generation/: after_operation.rs  check_for_change.rs  mod.rs
src/utils/: exhaustive_way_traversal.rs  file_with_all_edges.rs  len_histogram.rs  mod.rs  parallel_task_printing.rs  timing.rs
src/wordbucket_impls/: len_let_bucket.rs  len_let_wordlist.rs  mod.rs  numbered_len_let_wordlist.rs  tagged_len_let_wordlist.rs
