[package]
name = "intermededit"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version="2.0.1", features=["into", "deref", "from", "as_ref", "display"] }
indicatif = "0.17.11"
itertools = "0.14.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version="0.5", features=["html_reports"]}

[features]
default = ["unicode-word-len"]
cache-letters = []
unicode-word-len = []

[lib]
bench = false

[[bin]]
name = "intermededit"
path = "src/main.rs"
bench = false

[[bench]]
name = "max_depth_way_generation"
harness = false

[[bench]]
name = "wordlist_read"
harness = false

[[bench]]
name = "shortest_path"
harness = false
