[package]
name = "intermededit"
version = "0.1.0"
edition = "2024"
documentation = "https://heureka-code.github.io/intermededit"
repository = "https://github.com/heureka-code/intermededit"
homepage = "https://github.com/heureka-code/intermededit"

[dependencies]
derive_more = { version="2.0.1", features=["into", "deref", "from", "as_ref", "display"] }
indicatif = "0.17.11"
itertools = "0.14.0"
petgraph = "0.8.1"
rayon = "1.10.0"
either = "1.0"
thiserror = "2"
union-find = "0.4.3"

[dev-dependencies]
criterion = { version="0.5", features=["html_reports"]}

[features]
default = ["unicode-word-len", "words-in-components-sorted"]
cache-letters = []
unicode-word-len = []
words-in-components-sorted = []

[lib]
bench = false

[[bin]]
name = "intermededit"
path = "src/main.rs"
bench = false

[[bench]]
name = "max_depth_way_generation"
harness = false

[[bench]]
name = "wordlist_read"
harness = false

[[bench]]
name = "shortest_path"
harness = false
