[package]
name = "intermededit"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["debug", "display", "from", "into"] }
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
unic-normal = "0.9.0"

[features]
default = ["unicode-symbols"]
unicode-symbols = []

[workspace]
members = ["crates/duden-reference"]

